--- a/src/components/flashDeals/style.css
+++ b/src/components/flashDeals/style.css
@@ -2,3 +2,11 @@
   background: #f6f9fc;
   padding: 50px 0;
 }
+
+.imge{
+  width: 200px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
