--- a/src/components/top/style.css
+++ b/src/components/top/style.css
@@ -2,12 +2,15 @@
   position: relative;
 }
 .TopCate img {
-  width: 100%;
-  height: 100%;
+  width: 96px;
+  height: 86px;
   border-radius: 5px;
 }
 .TopCate .nametop {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
   width: 100%;
 }
 .TopCate .nametop span {
