--- a/src/components/MainPage/Home.css
+++ b/src/components/MainPage/Home.css
@@ -1,14 +1,15 @@
 .homeSlide h1 {
   font-size: 45px;
   line-height: 55px;
-  margin: 50px 0 20px 0;
+  margin: 50px 20px 20px 20px;
 }
 .homeSlide p {
-  margin: 20px 0;
+  margin: 20px 20px;
 }
 .homeSlide ul {
   position: absolute;
   bottom: 20px;
+  margin-left: 20px;
 }
 .homeSlide ul li {
   border: 2px solid #b8b7b7;
