--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,16 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   background-color: #ffffff;
+  /* background-color: #FFF5E0; */
 }
 .background {
   background: #f6f9fc;
+  /* background: #EEE4B1; */
   padding: 50px 0;
 }
 .container {
   max-width: 90%;
-  margin: auto;
+  margin : auto;
 }
 .d_flex {
   display: flex;
@@ -51,7 +53,7 @@ input,
 button {
   border: none;
   outline: none;
-  background-color: none;
+  background-color: none;;
 }
 .row {
   width: 50%;
@@ -108,6 +110,7 @@ button {
   font-weight: bold;
   color: #fff;
   border-radius: 5px;
+  margin-left: 20px;
 }
 .top {
   margin-top: 80px;
